<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <import type="com.jst.poc.dispatcher.models.Top_selection" />

    <variable
      name="dat"
      type="com.jst.poc.dispatcher.models.BeanSelectedPage" />
  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:gravity="center"
      android:orientation="horizontal">

      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnArrived"
        style="@style/btn_style"
        android:layout_width="@dimen/long_button_width"
        android:layout_height="@dimen/medium_button_height"
        android:layout_gravity="center"
        android:layout_marginEnd="75dp"
        android:background="@drawable/clickable_button_bg"
        android:text="@string/btn_arrived"
        android:visibility="gone" />

      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCompleted"
        style="@style/btn_style"
        android:layout_width="@dimen/long_button_width"
        android:layout_height="@dimen/medium_button_height"
        android:background="@drawable/btn_job_completed_bg"
        android:text="@string/btn_completed"
        android:textColor="@color/dim_white"
        android:visibility="gone" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:adjustViewBounds="true"
      android:scaleType="fitXY"
      android:src="@drawable/bottom_menu_seperator" />

    <LinearLayout
      android:id="@+id/layout_page_bottom"
      android:layout_width="match_parent"
      android:layout_height="120dp"
      android:background="@drawable/bottom_menu_background"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:paddingTop="10dp">

      <LinearLayout
        android:id="@+id/linbtnapp1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"

        android:orientation="vertical"
        android:paddingTop="5dp"
        android:textAlignment="center">

        <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/appicon1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          app:srcCompat="@drawable/app1" />

        <TextView
          android:id="@+id/textView2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/smart_patrol"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="14sp" />
      </LinearLayout>

      <LinearLayout
        android:id="@+id/linbtnapp2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"

        android:orientation="vertical"
        android:paddingTop="5dp">

        <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          app:srcCompat="@drawable/app2" />

        <TextView
          android:id="@+id/textView3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/smart_search"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="14sp" />
      </LinearLayout>

      <LinearLayout
        android:id="@+id/linbtnapp3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"

        android:orientation="vertical"
        android:paddingTop="5dp">

        <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          app:srcCompat="@drawable/app4" />

        <TextView
          android:id="@+id/textView5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/criminal_pred"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="14sp" />
      </LinearLayout>

      <LinearLayout
        android:id="@+id/linbtnapp4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"

        android:orientation="vertical"
        android:paddingTop="5dp">

        <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          app:srcCompat="@drawable/app3" />

        <TextView
          android:id="@+id/textView4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/e_ticket"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="14sp" />
      </LinearLayout>

      <LinearLayout
        android:id="@+id/linbtnapp5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"

        android:orientation="vertical"
        android:paddingTop="5dp">

        <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          app:srcCompat="@drawable/app5" />

        <TextView
          android:id="@+id/textView6"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/rasd"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="14sp" />
      </LinearLayout>

      <LinearLayout
        android:id="@+id/linbtnapp6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"

        android:orientation="vertical"
        android:paddingTop="5dp">

        <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          app:srcCompat="@drawable/app6" />

        <TextView
          android:id="@+id/textView7"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/heitel"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="14sp" />
      </LinearLayout>

      <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_weight="2"
        app:srcCompat="@drawable/smart_patrol_logo" />

    </LinearLayout>

  </LinearLayout>
</layout>